# swapper

./: .gitignore  Cache.hs  LICENSE  Makefile  README  Snapshot.hs  SwapMap.hs  Swapper.hs  THANKS  TokyoCabinet.hs  swapper.cabal  test-load.hs  test.hs
src/Data/Disk/: Cache.hs  Snapshot.hs  SwapMap.hs  Swapper.hs  TokyoCabinet.hs
src/Data/Disk/Swapper/: Cache.hs  HappstackCompat.hs  Snapshot.hs  TokyoCabinet.hs
test/: Makefile  happstack.hs  test-happstack.hs  test-load.hs  test.hs
